--- a/index.html
+++ b/index.html
@@ -36,15 +36,26 @@
 
         #marquee-text { white-space: nowrap; will-change: transform; }
 
+        /* ИСПРАВЛЕННЫЙ ЦЕНТРИРОВАННЫЙ ЗАГОЛОВОК */
         .title-wrapper {
-            display: flex; align-items: center; gap: 10px;
-            position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);
+            display: flex; align-items: center; justify-content: center; gap: 10px;
+            position: absolute; 
+            left: 50%; top: 50%; 
+            transform: translate(-50%, -50%);
+            width: 100%; /* Занимает всю ширину для точного центра */
             transition: all 1s cubic-bezier(0.65, 0, 0.35, 1); z-index: 100;
+            text-align: center;
         }
         
-        .title-wrapper.moved { top: 40px; left: 20px; transform: translate(0, 0); }
+        .title-wrapper.moved { 
+            top: 40px; 
+            left: 20px; 
+            transform: translate(0, 0); 
+            justify-content: flex-start; /* Прижимает к левому краю после переезда */
+            width: auto;
+        }
 
-        h1 { font-size: 24px; font-weight: bold; text-transform: uppercase; margin: 0; line-height: 1; }
+        h1 { font-size: 24px; font-weight: bold; text-transform: uppercase; margin: 0; line-height: 1; min-width: 10px; }
 
         .title-flag { 
             height: 22px; width: auto; opacity: 0; 
@@ -102,7 +113,6 @@
             text-transform: uppercase; white-space: nowrap; border: 1px solid #333;
         }
         .tooltip-wrapper:hover .tooltip-content { display: block; }
-        
         #about-tooltip { left: 0; }
         #sound-tooltip { right: 0; }
     </style>
@@ -126,7 +136,6 @@
         <a href="https://t.me" class="link-text interactive" target="_blank">tgk: @11</a>
         <a href="https://twitch.tv" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
         <a href="https://tiktok.com" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
-        <!-- Кнопка Discord с копированием -->
         <a href="javascript:void(0)" class="link-text interactive" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -166,14 +175,11 @@
             el.addEventListener('mouseleave', () => cursor.classList.remove('cursor-hover'));
         });
 
-        // Копирование Discord
         discordBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('dnka').then(() => {
                 const originalText = discordBtn.innerText;
                 discordBtn.innerText = 'COPIED!';
-                setTimeout(() => {
-                    discordBtn.innerText = originalText;
-                }, 2000);
+                setTimeout(() => discordBtn.innerText = originalText, 2000);
             });
         });
 
@@ -197,10 +203,10 @@
             }
         }
 
-        let currentSpeed = 0;
-        let targetSpeed = 0;
-        let galleryPos = 0;
+        let currentSpeed = 0, targetSpeed = 0, galleryPos = 0;
         let marqueePos = window.innerWidth;
+        const marqueePhrases = ["ALL BUTTONS CLICKABLE — HELLO IM DNKA — @OGDNKA", "123123123"];
+        let currentPhraseIdx = 0;
 
         function startAnimations() {
             function update() {
@@ -210,7 +216,11 @@
                 gallery.style.transform = `translateX(${galleryPos}px)`;
 
                 marqueePos -= 1.5;
-                if (marqueePos < -marqueeEl.offsetWidth) marqueePos = window.innerWidth;
+                if (marqueePos < -marqueeEl.offsetWidth) {
+                    marqueePos = window.innerWidth;
+                    currentPhraseIdx = (currentPhraseIdx + 1) % marqueePhrases.length;
+                    marqueeEl.innerText = marqueePhrases[currentPhraseIdx];
+                }
                 marqueeEl.style.transform = `translateX(${marqueePos}px)`;
                 requestAnimationFrame(update);
             }
