--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <audio id="bg-music" loop><source src="music.mp3" type="audio/mpeg"></audio>
 
     <div class="top-bar" id="top-bar">
-        <div id="marquee-text">ALL BUTTONS CLICKABLE — HELLO IM DNKA — @OGDNKA</div>
+        <div id="marquee-text">ALL BUTTONS CLICKABLE</div>
     </div>
 
     <div class="title-wrapper" id="main-title">
@@ -243,4 +243,5 @@
     </script>
 </body>
 </html>
+
 
