--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             width: 6px; height: 6px; background: #000; border-radius: 50%;
             position: fixed; pointer-events: none; z-index: 10001;
             transform: translate(-50%, -50%); transition: width 0.2s, height 0.2s;
+            /* Инверсия цвета при наведении на черный */
+            mix-blend-mode: difference;
+            background: #fff; /* В режиме difference белый на белом даст черный, а белый на черном — белый */
         }
         .cursor-hover { width: 12px !important; height: 12px !important; }
 
@@ -37,14 +40,15 @@
         #marquee-text { white-space: nowrap; will-change: transform; }
 
         .title-wrapper {
-            display: flex; align-items: center; justify-content: center; gap: 10px;
-            position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);
-            width: 100%; transition: all 1s cubic-bezier(0.65, 0, 0.35, 1); z-index: 100;
+            display: flex; align-items: center; justify-content: flex-start; gap: 10px;
+            position: absolute; 
+            left: 20px; top: 50%; transform: translateY(-50%); /* Слева при входе */
+            width: auto; transition: all 1s cubic-bezier(0.65, 0, 0.35, 1); z-index: 100;
         }
         
         h1 { font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 0; line-height: 1; transition: font-size 0.8s ease; }
         
-        .title-wrapper.moved { top: 40px; left: 20px; transform: translate(0, 0); justify-content: flex-start; width: auto; }
+        .title-wrapper.moved { top: 40px; transform: translateY(0); }
         .title-wrapper.moved h1 { font-size: 24px; }
 
         .title-flag { height: 22px; width: auto; opacity: 0; transition: opacity 0.8s ease-in-out; transition-delay: 1s; }
@@ -69,11 +73,10 @@
         .gallery { display: flex; width: max-content; will-change: transform; }
         .gallery img { width: 280px; height: auto; display: inline-block; margin: 0; padding: 0; }
 
-        /* СТИЛЬ ДЛЯ КОПИРАЙТА */
         .copyright {
-            font-size: 9px;
+            font-size: 8px; /* Уменьшил */
             text-transform: uppercase;
-            color: #888;
+            color: #000; /* Черный */
             margin-top: 15px;
             letter-spacing: 1px;
         }
@@ -105,10 +108,10 @@
         @media (min-width: 500px) {
             body { align-items: center; }
             .content-fade { align-self: center; }
-            .title-wrapper.moved { left: calc(50% - 230px); } 
+            .title-wrapper { left: calc(50% - 230px); } 
         }
         @media (max-width: 500px) {
-            .title-wrapper.moved { left: 20px; }
+            .title-wrapper { left: 20px; }
             .content-fade { margin-top: 55px; }
         }
     </style>
