--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me" class="link-text interactive" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com/ogdnka" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me/eeleve" class="link-text interactive" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv/bananapapa228" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com/@dnkanle" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text interactive" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -208,7 +208,7 @@
 
         let currentSpeed = 0, targetSpeed = 0, galleryPos = 0;
         let marqueePos = window.innerWidth;
-        const marqueePhrases = ["ALL BUTTONS CLICKABLE", "DM ME FOR ADS/SONG - @EELEVEX"];
+        const marqueePhrases = ["ALL BUTTONS CLICKABLE", "DM ME FOR ADS/SONG - @EELEVEX (4FREE)"];
         let currentPhraseIdx = 0;
 
         function startAnimations() {
@@ -246,3 +246,4 @@
     </script>
 </body>
 </html>
+
